# dirwatch

./: CMakeLists.txt  README.md
misc/: dirwatch.json  dirwatch.service
src/: config.cpp  config.hpp  event.cpp  event.hpp  main.cpp  util.cpp  util.hpp  watch.cpp  watch.hpp
